# pool_model_paper

./: .gitignore  Bacteria Modelling.bib  Cargo.toml  Makefile  README.md  TODO.md  colormap_HEX.txt  listings-rust.sty  main.tex  pool_model.tex  pyproject.toml  references.bib
.github/workflows/: test.yml
Figures/: abm_ode_comparison.eps
Figures/abm-homogenous/: abm_ode_comparison.eps  initial_cells.json
Figures/abm-homogenous-low-diffusion/: abm_ode_comparison.eps  meta_params.json
Figures/abm-inhomogenous/: abm_ode_comparison.eps  initial_cells.json
Figures/abm-inhomogenous-low-diffusion/: abm_ode_comparison.eps
Figures/abm-random/: abm_ode_comparison.eps  initial_cells.json
additional_tex/: packages.tex
cr_pool/: __init__.py  analysis.py  ode_models.py  plotting.py  plotting_templates.py  simulation.py  units.py
docs/: requirements.txt
docs/source/: conf.py  index.rst  model.rst
docs/source/documentation/: analysis.rst  index.rst  (+1 more)
paper/: Makefile  cover_letter_pool_paper.txt  listings-rust.sty  main.tex  main_case_study.tex  pool_model.tex  references.bib
pool_paper_plotting_code/digital_twin/: __init__.py  data_generation.py  model.py  plotting_templates.py  pool_model_functions.py
pool_paper_plotting_code/examples/: case_study_poolpaper.py  main_paper.py  plot_ode_optimization_history.py  pool_paper_spatial.py
scripts/: analysis.ipynb  paper_spatial_plots.py  pool_paper_spatial.py  run_sim.py  spatial2.py  visualize.ipynb
simulation-artifacts/: domain.json  initial_cells.json
src/: bacterial_properties.rs  lib.rs  simulation.rs
(+4 files in other folders)
